--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "private": true,
   "dependencies": {
     "@babel/polyfill": "^7.12.1",
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.13.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
@@ -67,6 +70,7 @@
     "postcss-preset-env": "^8.3.0",
     "sass": "^1.62.1",
     "sass-loader": "^13.2.2",
+    "style-loader": "^3.3.2",
     "svg-url-loader": "^8.0.0",
     "webpack": "^5.82.0",
     "webpack-cli": "^5.0.1",
