--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@babel/polyfill": "^7.12.1",
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
+    "@hookform/resolvers": "^3.1.0",
     "@mui/material": "^5.13.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
@@ -21,7 +22,8 @@
     "redux": "^4.2.0",
     "redux-saga": "^1.1.3",
     "web-vitals": "^2.1.4",
-    "webpack-merge": "^5.8.0"
+    "webpack-merge": "^5.8.0",
+    "yup": "^1.1.1"
   },
   "scripts": {
     "start": "webpack-dev-server --config webpack.dev.js --open",
