--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   },
   "scripts": {
     "start": "webpack-dev-server --config webpack.dev.js --open",
-    "build": "webpack build --config webpack.prod.js",
+    "build": " set NODE_ENV=production && webpack build --config webpack.prod.js",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -71,6 +71,7 @@
     "sass-loader": "^13.2.2",
     "style-loader": "^3.3.2",
     "svg-url-loader": "^8.0.0",
+    "terser-webpack-plugin": "^5.3.9",
     "webpack": "^5.82.0",
     "webpack-cli": "^5.0.1",
     "webpack-dev-server": "^4.11.1"
